--- a/styles/sections/About.module.css
+++ b/styles/sections/About.module.css
@@ -12,7 +12,7 @@
 
   padding-top: 100px;
   overflow-x: hidden;
-  overflow-y:visible;
+  overflow-y:scroll;
 
   box-sizing: border-box;
 
